refactor: reorganize package structure for Demo and Product APIs